--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,143 +1,146 @@
 
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>Project Pufferfish</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
+<head>
+  <meta charset="utf-8">
+  <title>Project Pufferfish</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="">
+  <meta name="author" content="">
 
-    <!-- Le styles -->
-    <link href="../assets/css/bootstrap.css" rel="stylesheet">
-    <style>
-      body {
-        padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
-      }
-    </style>
-    <script src="../js/jquery-1.8.1.min.js"></script>
-    <script src="../js/jquery.masonry.min.js"></script>
-    <link href="../css/index.css" rel="stylesheet">
+  <!-- Le styles -->
+  <link href="../assets/css/bootstrap.css" rel="stylesheet">
+  <style>
+    body {
+      padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
+    }
+  </style>
+  <script src="../js/jquery-1.8.1.min.js"></script>
+  <script src="../js/jquery.masonry.min.js"></script>
+  <link href="../css/index.css" rel="stylesheet">
 
-    <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
-    <!--[if lt IE 9]>
-      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
+  <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
+  <!--[if lt IE 9]>
+  <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+  <![endif]-->
 
-    <!-- Le fav and touch icons -->
-    <link rel="shortcut icon" href="../assets/ico/favicon.ico">
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="../assets/ico/apple-touch-icon-144-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="../assets/ico/apple-touch-icon-114-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="../assets/ico/apple-touch-icon-72-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" href="../assets/ico/apple-touch-icon-57-precomposed.png">
-  </head>
+  <!-- Le fav and touch icons -->
+  <link rel="shortcut icon" href="../assets/ico/favicon.ico">
+  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="../assets/ico/apple-touch-icon-144-precomposed.png">
+  <link rel="apple-touch-icon-precomposed" sizes="114x114" href="../assets/ico/apple-touch-icon-114-precomposed.png">
+  <link rel="apple-touch-icon-precomposed" sizes="72x72" href="../assets/ico/apple-touch-icon-72-precomposed.png">
+  <link rel="apple-touch-icon-precomposed" href="../assets/ico/apple-touch-icon-57-precomposed.png">
+</head>
 
-  <body>
+<body>
 
-    <div class="navbar navbar-inverse navbar-fixed-top">
-      <div class="navbar-inner">
-        <div class="container">
-          <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </a>
-          <a class="brand" href="#">Pufferfish</a>
-          <div class="nav-collapse collapse">
-            <ul class="nav">
-              <li class="active"><a href="#">Home</a></li>
-              <li><a href="#about">About</a></li>
-              <li><a href="#contact">Contact</a></li>
-            </ul>
-          </div><!--/.nav-collapse -->
-        </div>
+<div class="navbar navbar-inverse navbar-fixed-top">
+  <div class="navbar-inner">
+    <div class="container">
+      <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </a>
+      <a class="brand" href="#">Pufferfish</a>
+      <div class="nav-collapse collapse">
+        <ul class="nav">
+          <li class="active"><a href="#">Home</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </div><!--/.nav-collapse -->
+    </div>
+  </div>
+</div>
+
+<div class="container">
+
+  <h1>Puffer fish - Never surf alone </h1>
+  <p>Project Pufferfish is a non profit project for surfers to always have access to great surf! <br>
+    Dontat today and help us launch this bad boy!
+  </p>
+
+  <a class="wepay-widget-button wepay-green" id="wepay_widget_anchor_5043ebbbe398f" href="https://www.wepay.com/donations/84882">Donate $5.00</a>
+
+
+
+  <div id="masonContainer">
+    <div class="masonItem">
+      <img src="http://www.museumoftheweird.com/wp-content/uploads/2011/10/shark-surfing.jpg" alt="sharkpic">
+      <div class="innertext">
+        GOOOOD shit nigga
       </div>
     </div>
 
-    <div class="container">
+    <div class="masonItem">
+      <img src="http://gfg2sports.files.wordpress.com/2008/06/maliajones.jpg" alt="sharkpic">
+    </div>
+    <div class="masonItem">
+      <img src="http://www.shareyourride.net/images/Its_Never_Too_Late_To_Become_A_Surfer_Dude/Really_Big_Wave.jpg" alt="sharkpic">
+    </div>
+    <div class="masonItem">
+      <img src="http://www.escapefromamerica.com/wp-content/uploads/2010/06/normal_surf.jpg" alt="sharkpic">
+    </div>
+    <div class="masonItem">
+      <img src="http://www.bontheball.com/wp-content/uploads/2011/09/hot_surfer_chick.gif" alt="sharkpic">
+    </div>
+    <div class="masonItem">
+      <img src="http://www.aquasurfschool.com/images/pictures/california-surf-class.jpg" alt="sharkpic">
+    </div>
+  </div>
+</div> <!-- /container -->
 
-      <h1>Puffer fish - Never surf alone </h1>
-      <p>Project Pufferfish is a non profit project for surfers to always have access to great surf! <br>
-      	Dontat today and help us launch this bad boy!
-      </p>
-
-      <a class="wepay-widget-button wepay-green" id="wepay_widget_anchor_5043ebbbe398f" href="https://www.wepay.com/donations/84882">Donate $5.00</a>
-	
-
-
-      <div id="masonContainer">
-        <div class="masonItem">
-          <img src="http://www.museumoftheweird.com/wp-content/uploads/2011/10/shark-surfing.jpg" alt="sharkpic">
-        </div>
-
-        <div class="masonItem">
-          <img src="http://gfg2sports.files.wordpress.com/2008/06/maliajones.jpg" alt="sharkpic">
-        </div>
-        <div class="masonItem">
-          <img src="http://www.shareyourride.net/images/Its_Never_Too_Late_To_Become_A_Surfer_Dude/Really_Big_Wave.jpg" alt="sharkpic">
-        </div>
-        <div class="masonItem">
-          <img src="http://www.escapefromamerica.com/wp-content/uploads/2010/06/normal_surf.jpg" alt="sharkpic">
-        </div>
-        <div class="masonItem">
-          <img src="http://www.bontheball.com/wp-content/uploads/2011/09/hot_surfer_chick.gif" alt="sharkpic">
-        </div>
-        <div class="masonItem">
-          <img src="http://www.aquasurfschool.com/images/pictures/california-surf-class.jpg" alt="sharkpic">
-        </div>
-      </div>
-    </div> <!-- /container -->
-
-    <!-- Le javascript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-
-    <script type="text/javascript">
-		  var uvOptions = {};
-		  (function() {
-		    var uv = document.createElement('script'); uv.type = 'text/javascript'; uv.async = true;
-		    uv.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + 'widget.uservoice.com/xcCmM8gESUOOYuuZdpHxyw.js';
-		    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(uv, s);
-
-
-		  })();
-        $('img').load(function(){
-          setTimeout(function(){
-            $('#masonContainer').masonry({
-              itemSelector: '.masonItem'
-            });
-          })
-
-        })
-
-
-	</script>
+<!-- Le javascript
+================================================== -->
+<!-- Placed at the end of the document so the pages load faster -->
 
 <script type="text/javascript">
-	var WePay = WePay || {};
-	WePay.load_widgets = WePay.load_widgets || function() { };
-	WePay.widgets = WePay.widgets || [];
-	WePay.widgets.push( {
-		object_id: 84882,
-		widget_type: "donation_campaign",
-		anchor_id: "wepay_widget_anchor_5043ebbbe398f",
-		widget_options: {
-			donation_amount: "500",
-			allow_cover_fee: true,
-			enable_recurring: true,
-			allow_anonymous: true,
-			button_text: "Donate $5.00"
-		}
-	});
-	if (!WePay.script) {
-		WePay.script = document.createElement('script');WePay.script.type = 'text/javascript';WePay.script.async = true;
-		WePay.script.src = 'https://static.wepay.com/min/js/widgets.v2.js';
-		var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(WePay.script, s);
-	} else if (WePay.load_widgets) {
-		WePay.load_widgets();
-	}
+  var uvOptions = {};
+  (function() {
+    var uv = document.createElement('script'); uv.type = 'text/javascript'; uv.async = true;
+    uv.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + 'widget.uservoice.com/xcCmM8gESUOOYuuZdpHxyw.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(uv, s);
+
+
+  })();
+  $('img').load(function(){
+    setTimeout(function(){
+      $('#masonContainer').masonry({
+        itemSelector: '.masonItem'
+      });
+    })
+
+  })
+
+
+</script>
+
+<script type="text/javascript">
+  var WePay = WePay || {};
+  WePay.load_widgets = WePay.load_widgets || function() { };
+  WePay.widgets = WePay.widgets || [];
+  WePay.widgets.push( {
+    object_id: 84882,
+    widget_type: "donation_campaign",
+    anchor_id: "wepay_widget_anchor_5043ebbbe398f",
+    widget_options: {
+      donation_amount: "500",
+      allow_cover_fee: true,
+      enable_recurring: true,
+      allow_anonymous: true,
+      button_text: "Donate $5.00"
+    }
+  });
+  if (!WePay.script) {
+    WePay.script = document.createElement('script');WePay.script.type = 'text/javascript';WePay.script.async = true;
+    WePay.script.src = 'https://static.wepay.com/min/js/widgets.v2.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(WePay.script, s);
+  } else if (WePay.load_widgets) {
+    WePay.load_widgets();
+  }
 </script>
 
 
-  </body>
+</body>
 </html>
