--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,6 +1,16 @@
 .masonItem {
     float: left;
     width: 270px;
-    margin: 10px;
+    margin: 5px;
+    text-align: center;
+    background: lightsteelblue;
+    border-radius: 5px;
+    border: 3px solid black;
+    padding: 15px 0
+}
+.masonItem img {
+    width: 93%;
+    margin: 0 auto;
+    border-radius: 5px
 
 }
