Updated - index - added welcome message for email (in progress) - css - added texture pic image - query - added the unjumbled code (your welcome)

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -56,12 +56,19 @@
 
 <div class="container">
 
-  <h1>Puffer fish - Never surf alone </h1>
-  <p>Project Pufferfish is a non profit project for surfers to always have access to great surf! <br>
-    Dontat today and help us launch this bad boy!
-  </p>
+  <div class="hero-unit">
+    <div>
+      <h1>
+      Pufferfish - Document it!
+      </h1>
+      <p>
+        Document your story and share it with others, discover places and people, continue the journey.
+      </p>
+      <a class="wepay-widget-button wepay-green" id="wepay_widget_anchor_5043ebbbe398f" href="https://www.wepay.com/donations/84882">Donate $5.00</a>
+    </div>
+  </div>
 
-  <a class="wepay-widget-button wepay-green" id="wepay_widget_anchor_5043ebbbe398f" href="https://www.wepay.com/donations/84882">Donate $5.00</a>
+  
 
 
 
@@ -69,7 +76,7 @@
     <div class="masonItem">
       <img src="http://www.museumoftheweird.com/wp-content/uploads/2011/10/shark-surfing.jpg" alt="sharkpic">
       <div class="innertext">
-        GOOOOD shit nigga
+      Great surf shot
       </div>
     </div>
 
