--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,16 +1,17 @@
 .masonItem {
     float: left;
     width: 270px;
-    margin: 5px;
+    margin: 2px;
     text-align: center;
-    background: lightsteelblue;
-    border-radius: 5px;
-    border: 3px solid black;
+    background: white;
+    border-radius: 2px;
+    border: 1px solid black;
     padding: 15px 0
 }
 .masonItem img {
     width: 93%;
     margin: 0 auto;
-    border-radius: 5px
 
 }
+
+
